--- a/PlutoWallet/View/BasePage.xaml
+++ b/PlutoWallet/View/BasePage.xaml
@@ -12,7 +12,7 @@
              xmlns:staking="clr-namespace:PlutoWallet.Components.Staking"
              xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
              xmlns:confirmtransaction="clr-namespace:PlutoWallet.Components.ConfirmTransaction"
-             xmlns:assetselect="clr-namespace:PlutoWallet.Components.AssetSelect"
+             xmlns:assetselect="clr-namespace:PlutoWallet.Components.AssetSelect" xmlns:vault="clr-namespace:PlutoWallet.Components.Vault"
              BackgroundColor="Black">
 
     <AbsoluteLayout
@@ -61,7 +61,8 @@
         <connectionrequestview:ConnectionRequestView
                                    x:Name="connectionRequestView" />
 
-        
+        <vault:VaultSignView />
+
         <transactionrequest:TransactionRequestView />
 
         <transactionrequest:MessageSignRequestView />
