--- a/PlutoWallet/Components/PublicKeyQRCodeView/PublicKeyQRCodeView.xaml
+++ b/PlutoWallet/Components/PublicKeyQRCodeView/PublicKeyQRCodeView.xaml
@@ -20,10 +20,11 @@
                         HorizontalOptions="Center" />
 
                     <zxing:BarcodeGeneratorView Format="QrCode"
-                                                ForegroundColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                                                ForegroundColor="Black"
                                                 WidthRequest="200"
-                     HeightRequest="200" BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-                     Value="{Binding PublicKey}"/>
+                                                 HeightRequest="200"
+                                                 BackgroundColor="White"
+                                                 Value="{Binding PublicKey}"/>
                 </VerticalStackLayout>
 
                 <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, 40, 40">
