HydraDX Predefined layout

--- a/PlutoWallet/View/PredefinedLayoutsPage.xaml
+++ b/PlutoWallet/View/PredefinedLayoutsPage.xaml
@@ -29,6 +29,8 @@
 
                 <predefinedlayouts:AwesomaAjunaAvatarsLayoutItem />
 
+                <predefinedlayouts:HydraDXOmnipoolLayoutItem />
+
                 <predefinedlayouts:GenericPredefinedLayoutItem Title="Azero Testnet"
                                                                PlutoLayout="plutolayout: [dApp, contract, ExSL, AZEROPrimaryName, UsdB, SubK, ChaK];[18]"/>
 
