--- a/PlutoWallet/Components/Referenda/ReferendumInfoView.xaml
+++ b/PlutoWallet/Components/Referenda/ReferendumInfoView.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:microcharts="clr-namespace:Microcharts;assembly=Microcharts"
-             x:Class="PlutoWallet.Components.Referenda.ReferendumInfoView">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="PlutoWallet.Components.Referenda.ReferendumInfoView"
+             HeightRequest="60">
     <Border StrokeThickness="0"
             BackgroundColor="{AppThemeBinding Light=#fdfdfd, Dark=#0a0a0a}"
             Padding="0, 0, 0, 0">
@@ -19,30 +20,26 @@
 
         <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                             AbsoluteLayout.LayoutFlags="All"
-                            Margin="0, 10, 0, 10">
-            <VerticalStackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
-                                    AbsoluteLayout.LayoutFlags="SizeProportional">
-                <HorizontalStackLayout x:Name="horizontalStackLayout">
-                    <Label 
-                        FontAttributes="Bold"
-                        HorizontalOptions="Center"
-                        WidthRequest="{Binding Source={x:Reference horizontalStackLayout}, Path=Width}"
-                        Padding="10, 0, 60, 0"
-                        VerticalTextAlignment="End">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <Span FontAttributes="Bold" x:Name="titleLabelText" />
+                            Margin="0, 5, 0, 5">
+            <Label LineBreakMode="NoWrap"
+                 AbsoluteLayout.LayoutBounds="0.5, 0, 1, 30"
+                AbsoluteLayout.LayoutFlags="PositionProportional, WidthProportional"
+                Padding="10, 0, 60, 0"
+                VerticalTextAlignment="Center">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span FontAttributes="Bold" x:Name="titleLabelText" />
 
-                            </FormattedString>
+                    </FormattedString>
 
-                        </Label.FormattedText>
+                </Label.FormattedText>
 
-                    </Label>
-                </HorizontalStackLayout>
+            </Label>
 
                 <AbsoluteLayout HeightRequest="30"
-                                       Padding="0, 0, 70, 0"
-                                       WidthRequest="{Binding Source={x:Reference horizontalStackLayout}, Path=Width}"
+                                Padding="0, 0, 70, 0"
+                                AbsoluteLayout.LayoutBounds="0.5, 1, 1, 30"
+                                AbsoluteLayout.LayoutFlags="PositionProportional, WidthProportional"
                                        >
                     <Label x:Name="decisionLabel"
                            AbsoluteLayout.LayoutBounds="0, 0, 50, 30"
@@ -90,10 +87,7 @@
                         </Border>
 
                     </AbsoluteLayout>
-                    </AbsoluteLayout>
-
-
-            </VerticalStackLayout>
+                </AbsoluteLayout>
 
             <Image Source="subsquarelogo.png"
                     AbsoluteLayout.LayoutBounds="1, 0.5, 40, 40"
