--- a/PlutoWallet/View/CustomLayoutsPage.xaml
+++ b/PlutoWallet/View/CustomLayoutsPage.xaml
@@ -105,7 +105,10 @@
                                       x:Name="deleteView"
                                       IsVisible="False" Opacity="0" />
 
+        <networkselect:NetworkSelectPopup />
+
         <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
                         x:Name="protectiveLayout" IsVisible="False"/>
+
     </AbsoluteLayout>
 </ContentPage>
