temp metadata to string coversion

--- a/PlutoWallet/Components/Referenda/ReferendaView.xaml
+++ b/PlutoWallet/Components/Referenda/ReferendaView.xaml
@@ -46,7 +46,9 @@
                                                           AyesPercentage="{Binding AyesPercentage}"
                                                           NaysPercentage="{Binding NaysPercentage}"
                                                           Vote="{Binding Vote}"
-                                                          ReferendumIndex="{Binding ReferendumIndex}" />
+                                                          ReferendumIndex="{Binding ReferendumIndex}"
+                                                          Endpoint="{Binding Endpoint}"
+                                                          SubSquareLink="{Binding SubSquareLink}" />
                         </DataTemplate>
 
                     </BindableLayout.ItemTemplate>
