--- a/PlutoWallet/Components/Extrinsic/ExtrinsicStatusView.xaml
+++ b/PlutoWallet/Components/Extrinsic/ExtrinsicStatusView.xaml
@@ -18,10 +18,10 @@
                             FontAttributes="Bold"
                             HorizontalOptions="Start"
                             VerticalTextAlignment="End"/>
-                        <Image Source="{AppThemeBinding Light=infoblack.png, Dark=infowhite.png}" 
-                                   VerticalOptions="Center"
-                                   Margin="5, 0, 0, 0"
-                                   HeightRequest="15" WidthRequest="15"/>
+                        <Image VerticalOptions="Center"
+                               x:Name="chainIcon"
+                                Margin="5, 0, 0, 0"
+                                HeightRequest="15" WidthRequest="15"/>
                     </HorizontalStackLayout>
                 
                     <Label
