--- a/PlutoWallet/Components/Extrinsic/ExtrinsicStatusView.xaml
+++ b/PlutoWallet/Components/Extrinsic/ExtrinsicStatusView.xaml
@@ -14,10 +14,19 @@
                                      AbsoluteLayout.LayoutFlags="SizeProportional">
                     <HorizontalStackLayout>
                         <Label 
-                            x:Name="nameLabel"
-                            FontAttributes="Bold"
+                            
+                            
                             HorizontalOptions="Start"
-                            VerticalTextAlignment="End"/>
+                            VerticalTextAlignment="End">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span x:Name="nameLabelText" FontAttributes="Bold" />
+
+                                </FormattedString>
+
+                            </Label.FormattedText>
+
+                        </Label>
                         <Image VerticalOptions="Center"
                                x:Name="chainIcon"
                                 Margin="5, 0, 0, 0"
