--- a/PlutoWallet/View/MainView.xaml
+++ b/PlutoWallet/View/MainView.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.View.MainView">
     <ScrollView
-            AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
+            AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
+            IsEnabled="{Binding scrollIsEnabled}">
 
         <VerticalStackLayout
             x:Name="stackLayout"
