--- a/PlutoWallet/View/MnemonicsPage.xaml
+++ b/PlutoWallet/View/MnemonicsPage.xaml
@@ -40,14 +40,16 @@
                                             VerticalTextAlignment="End">
                                             <Label.FormattedText>
                                                 <FormattedString>
-                                                    <Span FontAttributes="Bold" Text="Mnemonics: "/>
+                                                    <Span FontAttributes="Bold"
+                                                          Text="{Binding Title}"/>
 
                                                 </FormattedString>
 
                                             </Label.FormattedText>
 
                                         </Label>
-                                         <Label Text="{Binding Mnemonics}" HorizontalTextAlignment="Center" />
+                                         <Label Text="{Binding Mnemonics}"
+                                                HorizontalTextAlignment="Center" />
                                     </VerticalStackLayout>
                 
                                 </VerticalStackLayout>
@@ -56,42 +58,9 @@
                     </card:Card>
                 </ContentView>
 
-                 <ContentView HeightRequest="90">
-                    <card:Card>
-                        <card:Card.View>
-                            <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
-                                            AbsoluteLayout.LayoutFlags="All"
-                                            Margin="0, 10, 0, 10">
-                                <VerticalStackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
-                                                     AbsoluteLayout.LayoutFlags="SizeProportional">
-                                    <VerticalStackLayout>
-                                        <Label 
-                                            FontAttributes="Bold"
-                                            HorizontalOptions="Center"
-                                            VerticalTextAlignment="End">
-                                            <Label.FormattedText>
-                                                <FormattedString>
-                                                    <Span FontAttributes="Bold" Text="Password: "/>
-
-                                                </FormattedString>
-
-                                            </Label.FormattedText>
-
-                                        </Label>
-                                        <Entry HeightRequest="40" Placeholder="Password"
-                                               Text="{Binding Password}" Margin="0, 10, 0, 10"
-                                               Keyboard="Plain" IsPassword="True" />
-
-                                    </VerticalStackLayout>
-                
-                                </VerticalStackLayout>
-                            </AbsoluteLayout>
-                        </card:Card.View>
-                    </card:Card>
-                </ContentView>
-
-                <Button Text="Continue" Clicked="ContinueToMainPageClicked" />
-                <Button Text="Use existing mnemonics" Clicked="GoToEnterMnemonics" />
+                <Button Text="Back to main screen" Clicked="ContinueToMainPageClicked" />
+                <Button Text="Use existing mnemonics" Clicked="GoToEnterMnemonics"
+                        />
 
             </VerticalStackLayout>
             
