--- a/PlutoWallet/View/SettingsPage.xaml
+++ b/PlutoWallet/View/SettingsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
-             xmlns:settings="clr-namespace:PlutoWallet.Components.Settings"
+             xmlns:settings="clr-namespace:PlutoWallet.Components.Settings" xmlns:confirmtransaction="clr-namespace:PlutoWallet.Components.ConfirmTransaction"
              x:Class="PlutoWallet.View.SettingsPage"
              Title="Settings"
              BackgroundColor="Black">
@@ -29,7 +29,13 @@
 
                 </settings:GenericButton>
 
-                <settings:ShowMnemonic />
+                <settings:GenericButton Title="Show mnemonics">
+                    <settings:GenericButton.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnShowMnemonicsClicked" />
+
+                    </settings:GenericButton.GestureRecognizers>
+
+                </settings:GenericButton>
 
                 <settings:GenericButton Title="Log out (Delete private key)">
                     <settings:GenericButton.GestureRecognizers>
@@ -44,6 +50,8 @@
 
         <navigationbar:TopNavigationBar Title="Settings"
                                         x:Name="topNavigationBar" />
+
+        <confirmtransaction:ConfirmTransactionView />
 
     </AbsoluteLayout>
 </ContentPage>
